--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+html, body{
+    margin: 0 !important;
+    padding: 0 !important;
+    background-color: #001935 !important;
+}
