--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,29 @@ html, body{
     padding: 0 !important;
     background-color: #001935 !important;
 }
+.overlay{
+    left: 0;
+    top: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index:  999;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.centrale{
+    position: absolute;
+    background-color: #001935;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    width: 45%;
+    top: 50%;
+    left: 50%;
+    transform:  translate(-50%, -50%);
+    -webkit-transform:  translate(-50%, -50%);
+    -moz-transform:  translate(-50%, -50%);
+    -ms-transform:  translate(-50%, -50%);
+    -o-transform:  translate(-50%, -50%);
+}
